# betterproto-rust-codec

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: descriptors.rs  lib.rs  well_known_types.rs
src/betterproto_interop/: error.rs  field_meta.rs  message.rs  message_class.rs  message_meta.rs
src/decode/: custom_message.rs  error.rs  mod.rs  value.rs
src/encode/: error.rs  message.rs  mod.rs
