[package]
name = "betterproto-rust-codec"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "betterproto_rust_codec"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.37"
indoc = "2.0.5"
prost = { version = "0.12.3", features = ["no-recursion-limit"] }
pyo3 = { version = "0.21.0", features = ["abi3-py37", "extension-module", "chrono"] }
thiserror = "1.0.58"
